Tap method performance improvement